fixed typo in html

--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "pokedom-ts",
+  "homepage": "https://sabifromtherock.github.io/pokedom-ts-tech-test/",
+  "author": "Szabolcs Sziklai",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
+    "sass": "^1.64.2",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "sass": "^1.64.2"
+    "vite": "^4.4.5"
   }
 }
